@@ -2,6 +2,8 @@ Revision history for Perl extension Starch.
 
 {{$NEXT}}
 
+ - Move the TimeoutStore plugin to a separate distribution.
+
 0.05 2015-07-27
 
  - Use the short store name when logging store exceptions.
